welcome.lessons.welcome.array.basics.Array2.scala.error
Array2:30: error: value lenght is not a member of Array[java.awt.Color]
  setCouleurBrosse(motif((getWorldHeight()-1+dec)%motif.lenght))
                                                        ^Array2:15: error: not found: value i
  mot(i) = getCouleurSol()
      ^